--- a/profiles/templates/profiles/about.html
+++ b/profiles/templates/profiles/about.html
@@ -7,7 +7,8 @@
 <style>
     /* --- DARK THEME STYLES FOR THE ABOUT PAGE --- */
     body {
-        background-color: #0d1b2a !important;
+        background: conic-gradient(from -90deg at 10% 110%, #3498db, #1b263b 50%, #0d1b2a) !important;
+    background-attachment: fixed;
     }
     .dark-theme-text { color: #a9d6e5; }
     .dark-theme-heading { color: #ffffff; }
